--- a/src/app/pages/todo/todo.page.scss
+++ b/src/app/pages/todo/todo.page.scss
@@ -9,3 +9,17 @@
     min-width: 200px;
   }
 }
+
+form {
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 2rem 0;
+
+    .form-control {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
