--- a/src/app/modules/todo/components/todo-action-modal/todo-action-modal.component.html
+++ b/src/app/modules/todo/components/todo-action-modal/todo-action-modal.component.html
@@ -1,23 +1,3 @@
 <ion-button id="open-todo-action-modal" expand="block">Open Modal</ion-button>
 
-<ion-modal trigger="open-todo-action-modal">
-  <ng-template>
-    <ion-header>
-      <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-button (click)="onCancel()">Cancel</ion-button>
-        </ion-buttons>
-
-        <ion-title>Welcome</ion-title>
-
-        <ion-buttons slot="end">
-          <ion-button (click)="onConfirm()" [strong]="true">Confirm</ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-header>
-
-    <ion-content class="ion-padding">
-      <p>Todo content</p>
-    </ion-content>
-  </ng-template>
-</ion-modal>
+<action-modal />
