--- a/src/app/modules/todo/todo.page.html
+++ b/src/app/modules/todo/todo.page.html
@@ -15,9 +15,7 @@
     >
   </div>
 
-  <todo-action-modal>
-    
-  </todo-action-modal>
+  <todo-action-modal> </todo-action-modal>
 
   <form *ngIf="isShowCreateForm" [formGroup]="taskForm" (ngSubmit)="onSave()">
     <h3>Create new task</h3>
