--- a/src/app/shared/components/action-modal/action-modal.component.html
+++ b/src/app/shared/components/action-modal/action-modal.component.html
@@ -6,7 +6,7 @@
           <ion-button (click)="onCancel()">Cancel</ion-button>
         </ion-buttons>
 
-        <ion-title>Welcome</ion-title>
+        <ion-title>{{ title }}</ion-title>
 
         <ion-buttons slot="end">
           <ion-button (click)="onConfirm()" [strong]="true">Confirm</ion-button>
@@ -15,7 +15,7 @@
     </ion-header>
 
     <ion-content class="ion-padding">
-      <p>Todo content</p>
+      <ng-content></ng-content>
     </ion-content>
   </ng-template>
 </ion-modal>
