feat: init layout + components

--- a/src/app/shared/components/action-modal/action-modal.component.html
+++ b/src/app/shared/components/action-modal/action-modal.component.html
@@ -1,4 +1,4 @@
-<ion-modal trigger="open-todo-action-modal">
+<ion-modal trigger="open-action-modal">
   <ng-template>
     <ion-header>
       <ion-toolbar>
