--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,3 +5,5 @@
     <ion-button id="open-action-modal">Register</ion-button>
   </ion-toolbar>
 </ion-header>
+
+<!-- TODO click confirm -> call onSubmit() on registert-form.component -->
