refactor: showing modal via emitter

--- a/src/app/modules/auth/register-form/register-form.component.html
+++ b/src/app/modules/auth/register-form/register-form.component.html
@@ -6,6 +6,8 @@
     formControlName="email"
   />
 
+  <ion-text color="danger">Invalid</ion-text>
+
   <ion-input
     label="Password"
     type="password"
