--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Retail Store</ion-title>
 
-    <ion-button id="open-action-modal">Register</ion-button>
+    <ion-button (click)="onClickRegister()">Register</ion-button>
   </ion-toolbar>
 </ion-header>
 
