--- a/src/app/shared/templates/main-layout/main-layout.component.html
+++ b/src/app/shared/templates/main-layout/main-layout.component.html
@@ -4,6 +4,7 @@
 <action-modal
   title="Register"
   [onConfirm]="registerForm.onSubmit.bind(registerForm)"
+  [disabledConfirmButton]="registerForm.disabledConfirm"
 >
   <!-- define id for content -->
   <register-form #registerForm />
