--- a/src/global.scss
+++ b/src/global.scss
@@ -17,8 +17,7 @@
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/typography.css";
 @import "@ionic/angular/css/display.css";
-
-/* Optional CSS utils that can be commented out */
+@import "theme/component.scss"; /* Optional CSS utils that can be commented out */
 // @import "@ionic/angular/css/padding.css";
 // @import "@ionic/angular/css/float-elements.css";
 // @import "@ionic/angular/css/text-alignment.css";
