--- a/src/app/shared/templates/main-layout/main-layout.component.html
+++ b/src/app/shared/templates/main-layout/main-layout.component.html
@@ -1,11 +1,1 @@
-<navbar (openRegisterModal)="onOpenRegisterModal()" />
-
-<!-- use pre-defined content id to bind its function -->
-<action-modal
-  title="Register"
-  [onConfirm]="registerForm.onSubmit.bind(registerForm)"
-  [disabledConfirmButton]="registerForm.disabledConfirm"
->
-  <!-- define id for content -->
-  <register-form #registerForm />
-</action-modal>
+<navbar />
