[RSP-8] Shopper Authentication (#2)

--- a/src/app/shared/components/action-modal/action-modal.component.html
+++ b/src/app/shared/components/action-modal/action-modal.component.html
@@ -1,4 +1,4 @@
-<ion-modal trigger="open-todo-action-modal">
+<ion-modal trigger="open-action-modal">
   <ng-template>
     <ion-header>
       <ion-toolbar>
@@ -9,7 +9,11 @@
         <ion-title>{{ title }}</ion-title>
 
         <ion-buttons slot="end">
-          <ion-button type="submit" (click)="handleConfirm()" [strong]="true"
+          <ion-button
+            type="submit"
+            (click)="handleConfirm()"
+            [strong]="true"
+            [disabled]="disabledConfirmButton"
             >Confirm</ion-button
           >
         </ion-buttons>
